2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/21_PrintAssign.deca
// Description:
//    Programme  print assign
// Resultats:
//      programme correcte syntaxiquement, invalide contextuellement
//
// Historique:
//    cree le 09/01/2024
{
    print(x = 52);  
}