2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/20_NolvalueAssign.deca
// Description:
//    tests de programme incorrect syntaxiquement , assign expr avec la valeur à gauche qui n'est pas lvalues
//
// Resultats:
//    ligne 10 : Erreur,  left-hand side of assignment is not an lvalue
//
// Historique:
//    cree le 09/01/2024
{
    2=2;
}